<resources>
    <string name="app_name">Woming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //근로법
    <string name="pregnant_workers">
- 사용자는 임신 중의 여성에게 출산 전과 출산 후를 통하여 90일(한 번에 둘 이상 자녀를 임신한 경우에는 120일)의 출산전후휴가를 주어야 한다. 이 경우 휴가 기간의 배정은 출산 후에 45일(한 번에 둘 이상 자녀를 임신한 경우에는 60일) 이상이 되어야 한다.
\n\n- 사용자는 임신 중인 여성 근로자가 유산의 경험 등 대통령령으로 정하는 사유로 휴가를 청구하는 경우 출산 전 어느 때 라도 휴가를 나누어 사용할 수 있도록 하여야 한다. 이 경우 출산 후의 휴가 기간은 연속하여 45일(한 번에 둘 이상 자녀를 임신한 경우에는 60일) 이상이 되어야 한다.
\n\n- 사용자는 임신 중인 여성이 유산 또는 사산한 경우로서 그 근로자가 청구하면 대통령령으로 정하는 바에 따라 유산ㆍ사산 휴가를 주어야 한다.
\n\n- 휴가 중 최초 60일(한 번에 둘 이상 자녀를 임신한 경우에는 75일)은 유급으로 하며, 출산전후휴가급여 등이 지급된 경우에는 그 금액의 한도에서 지급의 책임을 면한다.
\n\n- 사용자는 임신 중의 여성 근로자에게 시간외근로를 하게 하여서는 아니 되며, 그 근로자의 요구가 있는 경우에는 쉬운 종류의 근로로 전환하여야 한다.
\n\n- 사업주는 출산전후휴가 종료 후에는 휴가 전과 동일한 업무 또는 동등한 수준의 임금을 지급하는 직무에 복귀시켜야 한다.
\n\n- 사용자는 임신 후 12주 이내 또는 36주 이후에 있는 여성 근로자가 1일 2시간의 근로시간 단축을 신청하는 경우 이를 허용하여야 한다. 하지만 근로시간 단축을 이유로 해당 근로자의 임금을 삭감하여서는 아니 된다.
\n\n- 임신 중인 여성 근로자가 1일 소정근로시간을 유지하면서 업무의 시작 및 종료 시각의 변경을 신청하는 경우 이를 허용하여야 한다. 다만, 정상적인 사업 운영에 중대한 지장을 초래하는 경우 등 대통령령으로 정하는 경우에는 그러하지 아니하다.
\n\n- 생후 1년 미만의 유아(乳兒)를 가진 여성 근로자가 청구하면 1일 2회 각각 30분 이상의 유급 수유 시간을 주어야 한다.
\n\n- 사용자는 임신 중이거나 산후 1년이 지나지 아니한 여성과 18세 미만자를 도덕상 또는 보건상 유해ㆍ위험한 사업에 사용하지 못한다.

</string>

    <string name="parental_leave">
- 사업주는 근로자가 만 8세 이하 또는 초등학교 2학년 이하의 자녀를 양육하기 위하여 휴직을 신청하는 경우 이를 허용하여야 한다. 휴직 개시 예정일의 전 날까지 해당 사업에서 계속 근로한 기간이 6개월 미만인 근로자는 제외한다.
\n\n- 육아휴직의 기간은 자녀 1명당 1년 이내로 하며 육아휴일을 이유로 해고나 그 밖의 불리한 처우를 하여서는 아니 되며 육아휴직 기간에는 그 근로자를 해고하지 못한다. 다만, 사업을 계속할 수 없는 경우는 그러하지 아니하다.
\n\n- 한 자녀에 대하여 부, 모가 동시에 같은 육아휴직이 사용 가능하다.
\n\n- 육아휴직 기간(1년 이내)에 대하여 통상임금의 100분의 80(상한액:월150만원, 하한액:월70만원)을 육아휴직 급여액으로 지급한다. 단, 육아휴직급여액 중 일부(100분의 25)를 직장복귀 6개월 후에 합산하여 일시불로 지급한다.
\n\n- 육아휴직 기간 중 사업주로부터 육아휴직을 이유로 금품을 지급받은 경우로서 매월 단위로 육아휴직기간 중 지급받은 금품과 육아휴직 급여의 100분의 75에 해당하는 금액(하한액 70만원)을 합한 금액이 육아 휴직 시작일 기준으로 한 월 통상임금을 초과한 경우에는 그 초과한 금액을 육아휴직 급여의 100분의 75에 해당하는 금액에서 빼고 지급한다.
\n\n- 육아휴직급여 수급 대상자는 육아휴직을 시작한 날 이후 1개월부터 끝난 날 이후 12개월 이내에 신청해야한다.
    </string>

    <string name="workplace_harassment">
- 사용자 또는 근로자는 직장에서의 지위 또는 관계 등의 우위를 이용하여 업무상 적정범위를 넘어 다른 근로자에게 신체적ㆍ정신적 고통을 주거나 근무환경을 악화시키는 행위를 하여서는 아니 된다.
\n\n- 누구든지 직장 내 괴롭힘 발생 사실을 알게 된 경우 그 사실을 사용자에게 신고할 수 있다.
\n\n- 사용자는 따른 신고를 접수하거나 직장 내 괴롭힘 발생 사실을 인지한 경우에는 지체 없이 당사자 등을 대상으로 그 사실 확인을 위하여 객관적으로 조사를 실시하여야 한다.
\n\n- 사용자는 직장 내 괴롭힘 발생 사실을 신고한 근로자 및 피해근로자등에게 해고나 그 밖의 불리한 처우를 하여서는 아니 된다.
\n\n- 사용자는 조사 기간 동안 직장 내 피해 근로자를 보호하기 위하여 필요한 경우 해당 피해근로자등에 대하여 근무장소의 변경, 유급휴가 명령 등 적절한 조치를 하여야 한다. 이 경우 사용자는 피해근로자등의 의사에 반하는 조치를 하여서는 아니 된다.
\n\n- 사용자는 조사 결과 직장 내 괴롭힘 발생 사실이 확인된 때에는 피해근로자가 요청하면 근무장소의 변경, 배치전환, 유급휴가 명령 등 적절한 조치를 하여야 한다.
\n\n- 사용자는 조사 결과 직장 내 괴롭힘 발생 사실이 확인된 때에는 지체 없이 행위자에 대하여 징계, 근무장소의 변경 등 필요한 조치를 하여야 한다. 이 경우 사용자는 징계 등의 조치를 하기 전에 그 조치에 대하여 피해근로자의 의견을 들어야 한다.
\n\n- 직장 내 괴롭힘 발생 사실을 조사한 사람, 조사 내용을 보고받은 사람 및 그 밖에 조사 과정에 참여한 사람은 해당 조사 과정에서 알게 된 비밀을 피해 근로자등의 의사에 반하여 다른 사람에게 누설하여서는 아니 된다.
    </string>

    <string name="pay">
- 임금은 매월 1회 이상 일정한 날짜를 정하여 지급하여야 하며, 통화로 직접 근로자에게 그 전액을 지급하여야 한다.
\n\n- 사용자는 근로자가 출산, 질병, 재해, 그 밖에 대통령령으로 정하는 비상한 경우의 비용에 충당하기 위하여 임금 지급을 청구하면 지급기일 전이라도 이미 제공한 근로에 대한 임금을 지급하여야 한다.
    </string>

    <string name="minimum_hourly_wage">
2022년 기준 근로자 최저시급은 9,160원이다.
    </string>

    <string name="working_hours">
- 1주 간의 근로시간은 휴게시간을 제외하고 40시간을 초과할 수 없다. 다만 당사자간의 합의가 있을 경우 1주에 12시간을 한도로 근로시간을 연장할 수 있다.
\n\n- 1일의 근로시간은 휴게시간을 제외하고 8시간을 초과할 수 없다.
    </string>

    <string name="weekly_holiday_allowance">
사용자는 일주일 동안 15시간 근무한 근로자에게 1주일에 평균 1회 이상의 유급휴일을 주어야 하며, 이를 주휴일이라 한다. 주휴수당은 이 주휴일에 하루치 임금을 별도 산정하여 지급해야 하는 수당을 말한다. 월급 근로자의 경우 월급에 주휴수당이 포함돼 있지만, 시간제 근로자 등의 경우  ‘1주일 15시간 이상’ 근무 여부에 따라 주휴수당 지급 여부가 결정된다.
\n\n주휴수당 = 1일 소정 근로시간 * 시급

    </string>

    <string name="reat_time">
사용자는 근로시간이 4시간인 경우에는 30분 이상, 8시간인 경우에는 1시간 이상의 휴게시간을 근로시간 도중에 주어야 한다.
    </string>

    <string name="extension_night_holiday_work">
- 사용자는 연장근로에 대하여 통상임금의 100분의 50 이상을 가산하여 근로자에게 지급하여야 한다.
\n\n- 사용자는 야간근로(오후 10시부터 다음 날 오전 6시 사이의 근로를 말한다)에 대하여는 통상임금의 100분의 50 이상을 가산하여 근로자에게 지급하여야 한다.
\n\n- 사용자는 휴일근로에 대하여 각 호의 기준에 따른 금액 이상을 가산하여 근로자에게 지급하여야 한다. (8시간 이내의 휴일근로: 통상임금의 100분의 50, 8시간을 초과한 휴일근로: 통상임금의 100분의 100)
\n\n- 사용자는 근로자대표와의 서면 합의에 따라 연장근로ㆍ야간근로 및 휴일근로 등에 대하여 임금을 지급하는 것을 갈음하여 휴가를 줄 수 있다.
    </string>

    <string name="annual_paid_vacation">
- 사용자는 1년간 80퍼센트 이상 출근한 근로자에게 15일의 유급휴가를 주어야 한다.
\n\n- 사용자는 계속하여 근로한 기간이 1년 미만인 근로자 또는 1년간 80퍼센트 미만 출근한 근로자에게 1개월 개근 시 1일의 유급휴가를 주어야 한다.
\n\n- 사용자는 3년 이상 계속하여 근로한 근로자에게는 제1항에 따른 휴가에 최초 1년을 초과하는 계속 근로 연수 매 2년에 대하여 1일을 가산한 유급휴가를 주어야 한다. 이 경우 가산휴가를 포함한 총 휴가 일수는 25일을 한도로 한다.
    </string>

    <string name="menstrual_leave">
사용자는 여성 근로자가 청구하면 월 1일의 생리휴가를 주어야 한다.
    </string>

    <string name="retirement_benefit">
사용자가 퇴직하는 근로자에게 지급하는 퇴직급여 제도에 관하여는 「근로자퇴직급여 보장법」이 정하는 대로 따른다.
    </string>

    <string name="dismissal">
- 사용자는 근로자에게 정당한 이유 없이 해고, 휴직, 정직, 전직, 감봉, 그 밖의 징벌을 하지 못한다.
\n\n- 사용자는 근로자가 업무상 부상 또는 질병의 요양을 위하여 휴업한 기간과 그 후 30일 동안 또는 산전ㆍ산후의 여성이 이 법에 따라 휴업한 기간과 그 후 30일 동안은 해고하지 못한다.
\n\n- 사용자는 3개월 이상 근로한 근로자를 해고하려면 적어도 30일 전에 예고를 하여야 하고, 30일 전에 예고를 하지 아니하였을 때에는 30일분 이상의 통상임금을 지급하여야 한다.
\n\n- 사용자는 근로자를 해고하려면 해고사유와 해고시기를 서면으로 통지하여야 한다.
    </string>

    <string name="unfair_dismissal">
사용자가 근로자에게 부당해고등을 하면 근로자는 노동위원회에 구제를 신청할 수 있으며, 구체신청은 부당해고가 있었던 날부터 3개월 이내에 하여야 한다.
    </string>

    <string name="etc">
- 제82조(유족보상) 근로자가 업무상 사망한 경우에는 사용자는 근로자가 사망한 후 지체 없이 그 유족에게 평균임금 1,000일분의 유족보상을 하여야 한다.
\n\n- 제83조(장례비) 근로자가 업무상 사망한 경우에는 사용자는 근로자가 사망한 후 지체 없이 평균임금 90일분의 장례비를 지급하여야 한다.
    </string>

    //직장생활 Tip
    <string name="sexual_harassment">
\n성희롱이란?
\n사업주·상급자 또는 근로자가 직장에서의 지위를 이용하거나 업무와 관련하여 다른 근로자에게 성적 언동 등으로 성적 굴욕감 또는 혐오감을 느끼게 하거나 성적 언동 또는 그 밖의 요구 등에 따르지 아니하였다는 이유로 근로조건 및 고용에서 불이익을 주는 것을 말합니다.

\n\n 성희롱으로 판단되는 기준은?
\n[육체적 행위]
\n∙입맞춤, 포옹 또는 뒤에서 껴안는 등 신체적 접촉
\n∙가슴, 엉덩이 등 특정 신체부위를 만지는 행위
\n∙안마나 애무를 강요하는 행위

\n \n[육체적 행위]
\n∙음란한 농담, 음탕하고 상스러운 이야기를 하는 행위(통화 포함)
\n∙외모를 평가하거나 성적으로 비유하거나 신체 부위를 언급하는 행위
\n∙성적인 사실 관계를 묻거나 성적인 내용의 정보를 의도적으로 퍼뜨리는 행위
\n∙성적인 관계를 강요하거나 회유하는 행위
\n∙회식자리 등에서 무리하게 옆에 앉혀 술을 따르도록 강요하는 행위
\n \n[시각적 행위]
\n∙음란사진, 그림, 낙서, 출판물 등을 게시, 보여주는 행위(전화, 문자, SNS, 팩스 등 포함)
\n∙성과 관련된 자신의 신체부위를 고의적으로 노출하거나 만지는 행위
\n \n[기타 행위]
\n∙사회 통념상 성적 굴욕감 또는 혐오감을 느끼게 하는 것으로 인정되는 언어나 행동

\n \n성희롱 발생시엔 어떻게 해야할까?
\n1. 확실한 거부의 의사표현
\n – 합리적 해결방안 모색
\n – 사직을 생각하는 것은 바람직하지 않음(성희롱으로 인한 피해 회복이 중요)
\n \n 2. 어떤 방법으로 해결할지 모색
\n – 사내의 고충처리 절차, 여직원회, 노동조합, 외부 상담 기관이나 법률지원단체 등을 찾아본 후 적절한 해결방법을 선택
\n \n 3. 증거 수집
\n – 행위자에 거부의사 밝힘(문자나 편지 내용 증명 포함)
\n – 대화 녹음 법적 허용
\n \n 4. 직장 내 해결절차 이용
\n – 직장 내 성희롱 구제절차, 고충처리 절차가 마련되어 있다면 해당 기구에 신고, 기구나 담장자가 없는 경우 인사부서에 신고
\n – 신고할 때는 행위에 대해서 구체적으로 진술
\n – 본인의 보호조치 및 피해 구제를 위해 해결책 요구

\n \n 외부 기관을 통한 구제 방법은?
\n[비 사법적 구제]
\n지방고용노동관서 진정
\n노동위원회 구제신청
\n국가인권위원회 진정
\n\n[사법적 구제]
\n지방고용노동관서 고소/고발
\n검찰 고소/ 고발
\n법원 민사소송

    </string>
    <string name="explaining_workplace_bullying">
\n직장 내 괴롭힘이란?
\n직장 내 괴롭힘의 개념은 사용자 또는 근로자가 직장에서의 지위 또는 관계 등의 우위를 이용하여, 업무상 적정범위를 넘어 다른 근로자에게 신체적‧정신적 고통을 주거나 근무 환경을 악화시키는 행위를 말합니다.


\n\n 직장 내 괴롭힘으로 판단되는 기준은?
\n당사자의 관계, 행위가 행해진 장소 및 상황, 행위에 대한 피해자의 명시적 또는 추정적인 반응의 내용, 행위의 내용 및 정도, 행위의 지속성 여부 등 구체적 사정을 참작하여 종합적으로 판단합니다.


\n\n 예시
\n ∙ 정당한 이유 없이 업무 능력이나 성과를 인정하지 않거나 조롱함
\n∙ 정당한 이유 없이 훈련, 승진, 보상, 일상적인 대우 등에서 차별함
\n∙ 다른 근로자들과는 달리 특정 근로자에 대하여만 근로계약서 등에 명시되어 있지 않는 모두가 꺼리는 힘든 업무를 반복적으로 부여함
\n∙ 근로계약서 등에 명시되어 있지 않는 허드렛일만 시키거나 일을 거의 주지 않음
\n∙ 정당한 이유 없이 업무와 관련된 중요한 정보제공이나 의사결정 과정에서 배제시킴
\n∙ 정당한 이유 없이 휴가나 병가, 각종 복지혜택 등을 쓰지 못하도록 압력 행사
\n∙ 다른 근로자들과는 달리 특정 근로자의 일하거나 휴식하는 모습만을 지나치게 감시
\n∙ 사적 심부름 등 개인적인 일상생활과 관련된 일을 하도록 지속적, 반복적으로 지시
\n∙ 정당한 이유 없이 부서이동 또는 퇴사를 강요함
\n∙ 개인사에 대한 뒷담화나 소문을 퍼뜨림
\n∙ 신체적인 위협이나 폭력을 가함
\n∙ 욕설이나 위협적인 말을 함
\n∙ 다른 사람들 앞이나 온라인상에서 나에게 모욕감을 주는 언행을 함
\n∙ 의사와 상관없이 음주, 흡연, 회식 참여를 강요함
\n∙ 집단 따돌림
\n∙ 업무에 필요한 주요 비품(컴퓨터, 전화 등)을 주지 않거나, 인터넷‧사내 네트워크 접속을 차단함
\n\n 직장내 괴롭힘 발생시 사내 해결 절차
    </string>

    <string name="onefrg_a_1">
회계사의 지휘 하에 사업체의 재무 거래에 대해서 분기, 전기, 결산 등의 업무를 수행하여 회계사의 업무를 지원한다
    </string>
    <string name="onefrg_a_2">
        세무사의 지휘하에 세무에 관한 서류를 작성·검토·신고·신청하는 등 세무사의 업무를 지원한다.
    </string>

</resources>